--- a/cafe_butler/package.xml
+++ b/cafe_butler/package.xml
@@ -3,9 +3,12 @@
 <package format="3">
   <name>cafe_butler</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="root@todo.todo">root</maintainer>
-  <license>TODO: License declaration</license>
+  <description>Cafe butler that delivers orders from Kitchen to Tables</description>
+  <maintainer email="ppswaroopa@gmail.com">root</maintainer>
+  <license>MIT license</license>
+
+  <exec_depend>rclpy</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
